# InfoTracker

./: .gitignore  DBO_DBO_ANALYSIS.md  ProjectDescription.md  README.md  debug_cte_lineage.py  fix_regex.py  notatnik.md  postep.md  pyproject.toml  show_step4_cols.py  test_cte_recursion.py  test_cte_sqlglot.py  test_preprocessing.py  test_temp_proc.sql  test_wildcard.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cursor-trigger.yml
InfoTracker/: .infotrackerignore  TESTING.md  debug_view.py  pyproject.toml  requirements.txt
InfoTracker/.github/: copilot-instructions.md
InfoTracker/src/infotracker/: adapters.py  cli.py  config.py  engine.py  models.py  parser.py
InfoTracker/tests/: test_expected_outputs.py
docs/: adapters.md  agentic_workflow.md  algorithm.md  breaking_changes.md  cli_usage.md  configuration.md  dbt_integration.md  edge_cases.md  example_dataset.md  faq.md  lineage_concepts.md  overview.md
examples/dbt_warehouse/: .gitignore  README.md  dbt_project.yml
src/infotracker/: __init__.py  cli.py  diff.py  engine.py  io_utils.py  lineage.py  models.py  (+4 more)
tests/: test_adapter.py  test_cli_encoding.py  test_dbt_integration.py  test_debug_fix10_regression.py  test_insert_exec.py  test_integration.py  test_io_utils.py  test_leadtime_regression.py  test_merge_lineage.py  test_mis_fixedasset_lineage.py  test_namespace_resolution.py  test_parser.py  test_preprocessing.py  test_pseudo_prefix.py  test_sql_cutting.py  test_trialbalance.py  test_trialbalance_regression.py  test_use_statement.py  test_use_statement_tables.py  test_wildcard.py
(+47 files in other folders)
